src/commands/options.cpp
/* Generated by re2c 1.2.1 on Sun Oct 27 16:38:24 2019 */
#line 1 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
#include <iostream>

#include "cmd.hpp"
#include "optionexception.hpp"

#line 9 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
enum YYCONDTYPE {
    yycinit,
    yycapi,
    yycbackend,
    yycpath,
    yycoutput,
    yycoptions,
    yycurl,
};
#line 6 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"

namespace commands {
bool parseopt(char **argv, Cmd &cmd) {
  char *YYCURSOR, *YYMARKER;
  int cond = 0;

loop:
  YYCURSOR = *++argv;
  if (!YYCURSOR || *YYCURSOR == '\0') return true;

  
#line 31 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
        {
            unsigned char yych;
            switch (cond) {
            case yycinit: goto yyc_init;
            case yycapi: goto yyc_api;
            case yycbackend: goto yyc_backend;
            case yycpath: goto yyc_path;
            case yycoutput: goto yyc_output;
            case yycoptions: goto yyc_options;
            case yycurl: goto yyc_url;
            }
/* *********************************** */
yyc_init:
            yych = (unsigned char)*YYCURSOR;
            switch (yych) {
            case '-':    goto yy5;
            case 'a':    goto yy6;
            default:    goto yy3;
            }
yy3:
            ++YYCURSOR;
yy4:
#line 30 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException(
         "Command '" + std::string(*argv) + "' is not defined");
   }
#line 59 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy5:
            yych = (unsigned char)*(YYMARKER = ++YYCURSOR);
            switch (yych) {
            case '-':    goto yy7;
            case 'd':    goto yy9;
            case 'h':    goto yy10;
            case 'v':    goto yy11;
            default:    goto yy4;
            }
yy6:
            yych = (unsigned char)*(YYMARKER = ++YYCURSOR);
            switch (yych) {
            case 'p':    goto yy12;
            default:    goto yy4;
            }
yy7:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'd':    goto yy9;
            case 'h':    goto yy13;
            case 'v':    goto yy14;
            default:    goto yy8;
            }
yy8:
            YYCURSOR = YYMARKER;
            goto yy4;
yy9:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'u':    goto yy15;
            default:    goto yy8;
            }
yy10:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy16;
            goto yy8;
yy11:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy18;
            goto yy8;
yy12:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy20;
            default:    goto yy8;
            }
yy13:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy21;
            default:    goto yy8;
            }
yy14:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy22;
            default:    goto yy8;
            }
yy15:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'm':    goto yy23;
            default:    goto yy8;
            }
yy16:
            ++YYCURSOR;
#line 35 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.common.help = true;
      return true;
   }
#line 131 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy18:
            ++YYCURSOR;
#line 40 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.common.version = true;
      return true;
   }
#line 139 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy20:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy24;
            goto yy8;
yy21:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'l':    goto yy26;
            default:    goto yy8;
            }
yy22:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'r':    goto yy27;
            default:    goto yy8;
            }
yy23:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'p':    goto yy28;
            default:    goto yy8;
            }
yy24:
            ++YYCURSOR;
            cond = yycapi;
#line 55 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.kind = CmdKind::API;
      goto loop;
   }
#line 170 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy26:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'p':    goto yy10;
            default:    goto yy8;
            }
yy27:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy29;
            case 's':    goto yy30;
            default:    goto yy8;
            }
yy28:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'v':    goto yy31;
            default:    goto yy8;
            }
yy29:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'u':    goto yy32;
            default:    goto yy8;
            }
yy30:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy33;
            default:    goto yy8;
            }
yy31:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy34;
            default:    goto yy8;
            }
yy32:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'm':    goto yy35;
            default:    goto yy8;
            }
yy33:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'o':    goto yy36;
            default:    goto yy8;
            }
yy34:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'r':    goto yy37;
            default:    goto yy8;
            }
yy35:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy38;
            goto yy8;
yy36:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy11;
            default:    goto yy8;
            }
yy37:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 's':    goto yy40;
            default:    goto yy8;
            }
yy38:
            ++YYCURSOR;
#line 45 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.common.vernum = true;
      return true;
   }
#line 249 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy40:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy41;
            default:    goto yy8;
            }
yy41:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'o':    goto yy42;
            default:    goto yy8;
            }
yy42:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy43;
            default:    goto yy8;
            }
yy43:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy8;
            ++YYCURSOR;
#line 50 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.common.dumpversion = true;
      return true;
   }
#line 277 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_api:
            yych = (unsigned char)*YYCURSOR;
            switch (yych) {
            case '-':    goto yy50;
            default:    goto yy48;
            }
yy48:
            ++YYCURSOR;
yy49:
#line 60 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException(
         "The '" + std::string(*argv) + "' option does not exist"
      );
   }
#line 294 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy50:
            yych = (unsigned char)*(YYMARKER = ++YYCURSOR);
            switch (yych) {
            case '-':    goto yy51;
            case 'h':    goto yy53;
            case 'o':    goto yy54;
            case 'p':    goto yy55;
            case 'q':    goto yy56;
            default:    goto yy49;
            }
yy51:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'b':    goto yy57;
            case 'h':    goto yy58;
            case 'o':    goto yy59;
            case 'p':    goto yy60;
            case 'q':    goto yy61;
            case 'u':    goto yy62;
            default:    goto yy52;
            }
yy52:
            YYCURSOR = YYMARKER;
            goto yy49;
yy53:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy63;
            goto yy52;
yy54:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy65;
            goto yy52;
yy55:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy67;
            goto yy52;
yy56:
            yych = (unsigned char)*++YYCURSOR;
            if (yych <= 0x00) goto yy69;
            goto yy52;
yy57:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'a':    goto yy71;
            default:    goto yy52;
            }
yy58:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy72;
            default:    goto yy52;
            }
yy59:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'p':    goto yy73;
            case 'u':    goto yy74;
            default:    goto yy52;
            }
yy60:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'a':    goto yy75;
            default:    goto yy52;
            }
yy61:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'u':    goto yy76;
            default:    goto yy52;
            }
yy62:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'r':    goto yy77;
            default:    goto yy52;
            }
yy63:
            ++YYCURSOR;
#line 110 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.api.help = true;
      goto loop;
   }
#line 379 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy65:
            ++YYCURSOR;
#line 88 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      if (YYCURSOR[-1] == 0) {
         if (!(YYCURSOR = *++argv)) {
            throw OptionException("The '--output' option requires a value");
          }
      }

      cmd.api.output = YYCURSOR;
      goto yyc_output;
   }
#line 393 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy67:
            ++YYCURSOR;
#line 77 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      if (YYCURSOR[-1] == 0) {
         if (!(YYCURSOR = *++argv)) {
            throw OptionException("The '--path' option requires a value");
         }
      }

      cmd.api.path = YYCURSOR;
      goto yyc_path;
   }
#line 407 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy69:
            ++YYCURSOR;
#line 126 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      cmd.common.quiet = true;
      goto loop;
   }
#line 415 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy71:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'c':    goto yy78;
            default:    goto yy52;
            }
yy72:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'l':    goto yy79;
            default:    goto yy52;
            }
yy73:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 't':    goto yy80;
            default:    goto yy52;
            }
yy74:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 't':    goto yy81;
            default:    goto yy52;
            }
yy75:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 't':    goto yy82;
            default:    goto yy52;
            }
yy76:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy83;
            default:    goto yy52;
            }
yy77:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'l':    goto yy84;
            default:    goto yy52;
            }
yy78:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'k':    goto yy85;
            default:    goto yy52;
            }
yy79:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'p':    goto yy53;
            default:    goto yy52;
            }
yy80:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy86;
            default:    goto yy52;
            }
yy81:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'p':    goto yy87;
            default:    goto yy52;
            }
yy82:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'h':    goto yy88;
            default:    goto yy52;
            }
yy83:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy89;
            default:    goto yy52;
            }
yy84:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 0x00:
            case '=':    goto yy90;
            default:    goto yy52;
            }
yy85:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy92;
            default:    goto yy52;
            }
yy86:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'o':    goto yy93;
            default:    goto yy52;
            }
yy87:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'u':    goto yy94;
            default:    goto yy52;
            }
yy88:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 0x00:
            case '=':    goto yy67;
            default:    goto yy52;
            }
yy89:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 't':    goto yy56;
            default:    goto yy52;
            }
yy90:
            ++YYCURSOR;
#line 115 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      if (YYCURSOR[-1] == 0) {
         if (!(YYCURSOR = *++argv)) {
            throw OptionException("The '--url' option requires a value");
         }
      }

      cmd.api.url = YYCURSOR;
      goto yyc_url;
   }
#line 545 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy92:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy95;
            default:    goto yy52;
            }
yy93:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy96;
            default:    goto yy52;
            }
yy94:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 't':    goto yy97;
            default:    goto yy52;
            }
yy95:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'd':    goto yy98;
            default:    goto yy52;
            }
yy96:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 's':    goto yy99;
            default:    goto yy52;
            }
yy97:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 0x00:
            case '=':    goto yy65;
            default:    goto yy52;
            }
yy98:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 0x00:
            case '=':    goto yy100;
            default:    goto yy52;
            }
yy99:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 0x00:
            case '=':    goto yy102;
            default:    goto yy52;
            }
yy100:
            ++YYCURSOR;
#line 66 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      if (YYCURSOR[-1] == 0) {
         if (!(YYCURSOR = *++argv)) {
            throw OptionException("The '--backend' option requires a value");
         }
      }

      cmd.api.backend = YYCURSOR;
      goto yyc_backend;
   }
#line 610 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy102:
            ++YYCURSOR;
#line 99 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      if (YYCURSOR[-1] == 0) {
         if (!(YYCURSOR = *++argv)) {
            throw OptionException("The '--options' option requires a value");
         }
      }

      cmd.api.options = YYCURSOR;
      goto yyc_options;
   }
#line 624 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_backend:
            yych = (unsigned char)*YYCURSOR;
            switch (yych) {
            case 'Z':    goto yy108;
            default:    goto yy106;
            }
yy106:
            ++YYCURSOR;
yy107:
#line 131 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException("Backend '" + std::string(*argv) + "' does not supported");
   }
#line 639 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy108:
            yych = (unsigned char)*(YYMARKER = ++YYCURSOR);
            switch (yych) {
            case 'e':    goto yy109;
            default:    goto yy107;
            }
yy109:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy111;
            default:    goto yy110;
            }
yy110:
            YYCURSOR = YYMARKER;
            goto yy107;
yy111:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'd':    goto yy112;
            default:    goto yy110;
            }
yy112:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'E':    goto yy113;
            default:    goto yy110;
            }
yy113:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy114;
            default:    goto yy110;
            }
yy114:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'g':    goto yy115;
            default:    goto yy110;
            }
yy115:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'i':    goto yy116;
            default:    goto yy110;
            }
yy116:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'n':    goto yy117;
            default:    goto yy110;
            }
yy117:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case 'e':    goto yy118;
            default:    goto yy110;
            }
yy118:
            yych = (unsigned char)*++YYCURSOR;
            switch (yych) {
            case '3':    goto yy119;
            default:    goto yy110;
            }
yy119:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy110;
            ++YYCURSOR;
#line 135 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      goto loop;
   }
#line 711 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_path:
            yych = (unsigned char)*YYCURSOR;
            if (yych >= 0x01) goto yy126;
            ++YYCURSOR;
#line 139 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException("Invalid path specification");
   }
#line 721 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy126:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy126;
            ++YYCURSOR;
#line 143 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      goto loop;
   }
#line 730 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_output:
            yych = (unsigned char)*YYCURSOR;
            if (yych >= 0x01) goto yy134;
            ++YYCURSOR;
#line 147 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException("Invalid output specification");
   }
#line 740 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy134:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy134;
            ++YYCURSOR;
#line 151 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      goto loop;
   }
#line 749 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_options:
            yych = (unsigned char)*YYCURSOR;
            if (yych >= 0x01) goto yy142;
            ++YYCURSOR;
#line 155 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException("Invalid options specification");
   }
#line 759 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy142:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy142;
            ++YYCURSOR;
#line 159 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      goto loop;
   }
#line 768 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
/* *********************************** */
yyc_url:
            yych = (unsigned char)*YYCURSOR;
            if (yych >= 0x01) goto yy150;
            ++YYCURSOR;
#line 163 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      throw OptionException("Invalid url specification");
   }
#line 778 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
yy150:
            yych = (unsigned char)*++YYCURSOR;
            if (yych >= 0x01) goto yy150;
            ++YYCURSOR;
#line 167 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"
            {
      goto loop;
   }
#line 787 "/Users/klay/work/zephir/c++-zephir/src/commands/options.cpp"
        }
#line 170 "/Users/klay/work/zephir/c++-zephir/src/commands/options.re"


  return true;
}
}  // namespace commands
